# ecs-experiment

./: .gitignore  .gitmodules
web/: animation.ts  errorHandler.ts  index.html  index.ts  package-lock.json  package.json  renderer.ts  timing.ts  tsconfig.json  webpack.config.js
web-wasm/: .gitignore  Cargo.toml  build-release  index.html  index.ts  package-lock.json  package.json  webpack.config.js
web-wasm/lib/mylib/: Cargo.toml
web-wasm/lib/mylib/src/: animation.rs  lib.rs  resources.rs  transform.rs
web-wasm/lib/mylib/src/renderer/: mod.rs  shader.wgsl
web-wasm/src/: animation.rs  lib.rs
