[package]
name = "canvas"
version = "0.1.0"
authors = [""]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.62"
wasm-bindgen = "0.2.85"
bevy_ecs = "0.10.1"
dyn-clone = "1.0.11"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
unsafe-send-sync = "0.1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  "console", 
  "InputEvent"
  ,"HtmlInputElement"
]
