[package]
name = "mylib"
version = "0.1.0"
authors = [""]
edition = "2021"

###########[target.'cfg(target_arch = "wasm32")'.lib]
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
js-sys = "0.3.62"
wasm-bindgen = "0.2.85"
wasm-bindgen-futures = "0.4.36"
bevy_ecs = "0.10.1"
dyn-clone = "1.0.11"
wgpu = { version="0.16.0"  }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
unsafe-send-sync = "0.1.0"
env_logger = "0.10.0"
pollster = "0.3.0"
log = "0.4.17"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
winit = "0.27"
image = {version = "0.24.6", default-features = false, features = ["png", "jpeg" ]}
ehttp = "0.2.0"
bytemuck = { version = "1.4", features = ["derive"] }
glam = "0.24.0"
cfg-if = "1.0.0"
rand = "0.8.5"
instant = "0.1"
futures = { version = "0.3", default-features = false , features=["executor"]}
wgsl_preprocessor = "1.1.3"
guillotiere = "0.6.2"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Window',
  "console", 
  "InputEvent"
  ,"HtmlInputElement"
]

[target.'cfg(target_arch = "wasm32")'.dependencies.instant]
version = "0.1"
features = [ "wasm-bindgen", "inaccurate"]


[features]
webgl= ["wgpu/webgl"]
webgpu = [] 








